kmmessage.cpp
@@ -1155,8 +1155,7 @@ KMMessage* KMMessage::createForward( const QString &tmpl /* = QString() */ )
     msg->fromDwString( this->asDwString() );
     // remember the type and subtype, initFromMessage sets the contents type to
     // text/plain, via initHeader, for unclear reasons
-    const int type = msg->type();
-    const int subtype = msg->subtype();
+    DwMediaType& oldContentType = msg->mMsg->Headers().ContentType();
 
     msg->sanitizeHeaders();
 
@@ -1173,12 +1172,14 @@ KMMessage* KMMessage::createForward( const QString &tmpl /* = QString() */ )
       }
     }
     msg->mMsg->Assemble();
-
     msg->initFromMessage( this );
+
     //restore type
-    msg->setType( type );
-    msg->setSubtype( subtype );
-  } else if( type() == DwMime::kTypeText && subtype() == DwMime::kSubtypeHtml ) {
+    msg->mMsg->Headers().ContentType().FromString( oldContentType.AsString() );
+    msg->mMsg->Headers().ContentType().Parse();
+    msg->mMsg->Assemble();
+  }
+  else if( type() == DwMime::kTypeText && subtype() == DwMime::kSubtypeHtml ) {
     // This is non-multipart html mail. Let`s make it text/plain and allow
     // template parser do the hard job.
     msg->initFromMessage( this );
@@ -1186,7 +1187,8 @@ KMMessage* KMMessage::createForward( const QString &tmpl /* = QString() */ )
     msg->setSubtype( DwMime::kSubtypeHtml );
     msg->mNeedsAssembly = true;
     msg->cleanupHeader();
-  } else {
+  }
+  else {
     // This is a non-multipart, non-text mail (e.g. text/calendar). Construct
     // a multipart/mixed mail and add the original body as an attachment.
     msg->initFromMessage( this );
@@ -2494,6 +2496,16 @@ void KMMessage::setNeedsAssembly()
   mNeedsAssembly = true;
 }
 
+//-----------------------------------------------------------------------------
+void KMMessage::assembleIfNeeded()
+{
+  Q_ASSERT( mMsg );
+
+  if ( mNeedsAssembly ) {
+    mMsg->Assemble();
+    mNeedsAssembly = false;
+  }
+}
 
 //-----------------------------------------------------------------------------
 QByteArray KMMessage::body() const
@@ -2652,6 +2664,8 @@ void KMMessage::setBodyEncodedBinary( const QByteArray& bodyStr, DwEntity *entit
   }
 
   entity->Body().FromString( dwResult );
+  entity->Body().Parse();
+
   mNeedsAssembly = true;
 }
 
@@ -4265,3 +4279,26 @@ void KMMessage::deleteWhenUnused()
 {
   s->pendingDeletes << this;
 }
+
+#ifndef NDEBUG
+void KMMessage::dump( DwEntity *entity, int level )
+{
+  if ( !entity )
+    entity = mMsg;
+
+  QString spaces;
+  for ( int i = 1; i <= level; i++ )
+    spaces += "  ";
+
+  kDebug() << QString( spaces + "Headers of entity " + entity->partId() + ":" );
+  kDebug() << QString( spaces + entity->Headers().AsString().c_str() );
+  kDebug() << QString( spaces + "Body of entity " + entity->partId() + ":" );
+  kDebug() << QString( spaces + entity->Body().AsString().c_str() );
+
+  DwBodyPart *current = entity->Body().FirstBodyPart();
+  while ( current ) {
+    dump( current, level + 1 );
+    current = current->Next();
+  }
+}
+#endif
